# tidy_BMG_microplate

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  bmg_omega_to_prism.ipynb  bmg_omega_to_prism.py  main.py  pyproject.toml  tidy_microplate.py
example/: bmg_lumistar_omega.csv  bmg_lumistar_omega.xlsx  plate_omega_time_series_for_prism.xlsx
templates/: output_template.xlsx
